--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,23 +11,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.14"
-      
+
       - name: Install uv
         uses: astral-sh/setup-uv@v3
-      
+
       - name: Install dependencies
         run: uv sync --all-extras
-      
+
       - name: Run type checking
         run: uv run ty check
-      
+
       - name: Run ruff
         run: uv run ruff check
-      
+
       - name: Run tests
         run: uv run pytest
+
+      - name: Test Dockerfile
+        run: docker build -t my-app:test . -f Dockerfile
