--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "mdurl>=0.1",
     "mypy>=1.19.1",
     "python-multipart>=0.0.6",
+    "whitenoise>=6.11.0",
 ]
 
 [dependency-groups]
